# payroll

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  LICENSE-DOCS  README.md  composer.json  phpunit.xml
SDK/python/: README.md  pyproject.toml
SDK/python/payroll_sdk/: __init__.py  client.py  exceptions.py
SDK/python/tests/: __init__.py  conftest.py  test_client_init.py  test_employees.py  test_errors.py  test_logo.py  test_outputs.py  test_payroll.py  test_tax_config.py
docs/: ADMIN.md  API-QUICK-REFERENCE.md  API.md  AUDIT-PRODUCTION-READINESS-TEMP.md  CONFIGURATION.md  DATA-MODEL.md  INSTALL.md  PRD-PLAN-GAP-ANALYSIS.md  PRD.md  README.md  SMCP-PLUGIN.md  TAX-CONFIG.md  TESTING.md  VISUAL-WALKTHROUGH.md
public/admin/: api-keys.php  change-password.php  company-settings.php  compliance.php  employee-document.php  employee-form.php  employees.php  index.php  login.php  logo.php  logout.php  payroll.php  tax-config.php  users.php  w2.php
public/api/: create-employee.php  delete-employee.php  delete-tax-brackets.php  generate-w2.php  get-employee.php  get-payroll.php  get-tax-brackets.php  list-employees.php  list-payroll.php  list-tax-brackets.php  logo-file.php  pdf-stub.php  run-payroll.php  update-employee.php  upload-logo.php  upload-tax-brackets.php
public/css/: style.css
public/includes/: auth.php  config.php  csrf.php  database.php  functions.php  security-headers.php
scripts/: capture_admin_walkthrough.py  run-tests.php
smcp_plugin/: README.md  __init__.py  cli.py  requirements.txt
smcp_plugin/tests/: __init__.py  (+2 more)
tests/: bootstrap.php
(+10 files in other folders)
