[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payroll-sdk"
version = "0.3.0"
description = "Python SDK for the Payroll REST API (Decision Science Corp.)"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.7"
authors = [{ name = "Decision Science Corp." }]
keywords = ["payroll", "api", "sdk"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=6", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["payroll_sdk*"]
